# api.dungeon.studio

./: .dockerignore  .envrc  .gitignore  .travis.yaml  .travis.yml  ChangeLog.md  Dockerfile  Dockerfile.collection-server  Dockerfile.compose  Dockerfile.dungeon-studio  Dockerfile.earthdawn-resources  Dockerfile.scratch  README.md  api-dungeon-studio.cabal  api-dungeon-studio.nix  cloudbuild.heroku.develop.yaml  cloudbuild.heroku.master.yaml  cloudbuild.heroku.release.yaml  cloudbuild.heroku.yaml  cloudbuild.master.yaml  cloudbuild.release.yaml  cloudbuild.yaml  collection-server.Dockerfile  default.nix  docker-compose.yml  dungeon-studio.Dockerfile  dungeon-studio.cabal  dungeon-studio.nix  earthdawn-resources.Dockerfile  hasbolt.nix  shell.nix  siren-json.nix
features/: character-creation.feature  environment.py
features/internal/context/: __init__.py
features/internal/context/docker/: __init__.py  compose.py
features/steps/: character.py
nix/: siren-json.nix
resources/earthdawn/4e/abilities/: astral-sight.yaml  flight.yaml  gahad.yaml  heat-sight.yaml  increased-physical-defense.yaml  increased-wound-threshold.yaml  low-light-vision.yaml  natural-armor.yaml  strong-back.yaml  tail-combat.yaml  versatility.yaml
resources/earthdawn/4e/disciplines/: air-sailor.yaml  archer.yaml  beastmaster.yaml  cavalryman.yaml  elementalist.yaml  illusionist.yaml  nethermancer.yaml  scout.yaml  swordmaster.yaml  thief.yaml  troubadour.yaml  warrior.yaml  weaponsmith.yaml  wizard.yaml
resources/earthdawn/4e/races/: dwarf.yaml  elf.yaml  human.yaml  obsidiman.yaml  ork.yaml  troll.yaml  tskrang.yaml  windling.yaml
src/: API.hs  Environment.hs  Errors.hs  Initialize.hs  Main.hs  Settings.hs
src/Characters/: API.hs  Queries.hs  Scopes.hs  Types.hs
src/Collection/: JSON.hs  Type.hs
src/Data/: CollectionJSON.hs  SirenJSON.hs
src/Data/Amundsen/: Collection.hs
src/Data/Amundsen/Collection/: JSON.hs  Type.hs  Types.hs
src/Earthdawn/: API.hs  Api.hs  Attributes.hs  Races.hs  RacialAbilities.hs  Settings.hs
src/Earthdawn/FourthEdition/: API.hs  Api.hs  Race.hs
src/Earthdawn/FourthEdition/Abilities/: API.hs  Queries.hs  Types.hs  Values.hs
src/Earthdawn/FourthEdition/Characters/: API.hs  Queries.hs  Types.hs
src/Earthdawn/FourthEdition/Disciplines/: API.hs  Queries.hs  Types.hs  Values.hs
src/Earthdawn/FourthEdition/Races/: API.hs  Queries.hs  Types.hs  Values.hs
src/Earthdawn/FourthEdition/Talents/: API.hs  Types.hs
src/Internal/: Auth0.hs  URI.hs
src/Internal/BoltPool/: Environment.hs
src/Internal/Data/: CollectionJSON.hs  SirenJSON.hs
src/Internal/JWT/: Environment.hs
src/Internal/Network/: URI.hs
src/Internal/Network/HTTP/: Media.hs  Types.hs
src/Internal/Servant/API/ContentTypes/: SirenJSON.hs
src/Servant/API/ContentTypes/: Collection.hs  CollectionJSON.hs  SirenJSON.hs
src/collection-server/: API.hs  Environment.hs  Errors.hs  Main.hs  Types.hs
src/collection-server/Editions/Fourth/: Race.hs
src/collection-server/Internal/Data/: CollectionJSON.hs
src/collection-server/Internal/Network/: URI.hs
src/collection-server/Internal/Servant/API/ContentTypes/: CollectionJSON.hs
src/dungeon-studio/: API.hs  Environment.hs  Initialize.hs  Main.hs  Settings.hs
src/dungeon-studio/Earthdawn/: API.hs  Initialize.hs  Settings.hs
src/dungeon-studio/Earthdawn/FourthEdition/: API.hs
src/dungeon-studio/Earthdawn/FourthEdition/Abilities/: Queries.hs  Types.hs
src/dungeon-studio/Earthdawn/FourthEdition/Characters/: API.hs
src/dungeon-studio/Earthdawn/FourthEdition/Disciplines/: Queries.hs  Values.hs
src/dungeon-studio/Earthdawn/FourthEdition/Races/: API.hs  Types.hs  Values.hs
src/dungeon-studio/Internal/Data/: CollectionJSON.hs  SirenJSON.hs
src/dungeon-studio/Internal/Data/Time/Clock/: Environment.hs
src/dungeon-studio/Internal/Database/Bolt/: Environment.hs
src/dungeon-studio/Internal/JWT/: Environment.hs  Servant.hs  Types.hs
src/dungeon-studio/Internal/Network/: URI.hs
src/dungeon-studio/Internal/Network/HTTP/: Media.hs  Types.hs
src/dungeon-studio/Internal/Servant/API/ContentTypes/: CollectionJSON.hs  SirenJSON.hs
static/earthdawn/4e/abilities/: gahad  heat-sight  increased-wound-threshold  low-light-vision  natural-armor  strong-back  versatility
static/earthdawn/4e/races/dwarf/: abilities  index
static/earthdawn/4e/races/elf/: abilities  index
static/earthdawn/4e/races/human/: abilities  index
static/earthdawn/4e/races/obsidiman/: abilities  index
static/earthdawn/4e/races/ork/: abilities  index
static/earthdawn/4e/races/troll/: abilities  index
static/earthdawn/4e/races/tskrang/: abilities  index
test/api/dungeon-studio/Character/: ListSpec.hs
test/collection-json/: Test.hs
test/collection-json/Internal/Data/CollectionJSON/: Tests.hs
test/common/Internal/Docker/: Compose.hs
test/common/Internal/Test/Contexts/Docker/: Compose.hs
test/siren/: Test.hs
test/siren/Internal/Data/SirenJSON/: Tests.hs
test/siren/Internal/Network/HTTP/Media/: Tests.hs
test/system/dungeon-studio/: Spec.hs
test/system/dungeon-studio/Character/: CreationSpec.hs
