name:                dungeon-studio
version:             0.1.0.0
synopsis:            Game Master's Companion

description:
  A set of APIs that assist a game master during a table top game session.  The
  APIs allow a game master or players to manipulate characters, equipment, and
  other normal game elements.

homepage:            https://github.com/alunduil/dungeon.studio
bug-reports:         https://github.com/alunduil/dungeon.studio/issues
license:             MIT
license-file:        LICENSE
author:              Alex Brandt
maintainer:          alunduil@alunduil.com
copyright:           (c) 2017 Alex Brandt
category:            Game
build-type:          Simple
cabal-version:       >= 1.10
tested-with:         GHC == 8.*

extra-source-files:
    ChangeLog.md
  , COPYRIGHT
  , LICENSE
  , README.md
  , Setup.hs
  
source-repository head
  type:     git
  location: https://github.com/alunduil/dungeon-studio
  branch:   develop

executable collection-server
  default-language:    Haskell2010
  hs-source-dirs:      src/collection-server

  main-is:             Main.hs

  ghc-options:         -Wall -fwarn-tabs -fwarn-monomorphism-restriction
                       -fwarn-unused-do-bind
                       -- TODO parameterize static compilation
                       -- -optl-static -optl-pthread

  other-modules:
      API
    , Editions.Fourth.Race
    , Environment
    , Internal.Data.CollectionJSON
    , Internal.Network.URI
    , Internal.Servant.API.ContentTypes.CollectionJSON

  build-depends:
      aeson          == 1.0.*
    , base           == 4.9.*
    , containers     == 0.5.*
    , directory      == 1.3.*
    , envy           == 1.3.*
    , filepath       == 1.4.*
    , http-media     == 0.6.*
    , network-uri    == 2.6.*
    , servant        == 0.9.*
    , servant-server == 0.9.*
    , text           == 1.2.*
    , vector         == 0.11.*
    , wai-logger     == 2.3.*
    , warp           == 3.2.*
    , yaml           == 0.8.*

  other-extensions:

executable dungeon-studio
  default-language:    Haskell2010
  hs-source-dirs:      src/dungeon-studio

  main-is:             Main.hs

  ghc-options:         -Wall -fwarn-tabs -fwarn-monomorphism-restriction
                       -fwarn-unused-do-bind
                       -- TODO parameterize static compilation
                       -- -optl-static -optl-pthread

  other-modules:
      API
    , Earthdawn.API
    , Earthdawn.FourthEdition.Abilities.API
    , Earthdawn.FourthEdition.Abilities.Queries
    , Earthdawn.FourthEdition.Abilities.Types
    , Earthdawn.FourthEdition.Abilities.Values
    , Earthdawn.FourthEdition.API
    , Earthdawn.FourthEdition.Characters.API
    , Earthdawn.FourthEdition.Characters.Queries
    , Earthdawn.FourthEdition.Characters.Types
    , Earthdawn.FourthEdition.Disciplines.API
    , Earthdawn.FourthEdition.Disciplines.Queries
    , Earthdawn.FourthEdition.Disciplines.Types
    , Earthdawn.FourthEdition.Disciplines.Values
    , Earthdawn.FourthEdition.Races.API
    , Earthdawn.FourthEdition.Races.Queries
    , Earthdawn.FourthEdition.Races.Types
    , Earthdawn.FourthEdition.Races.Values
    , Earthdawn.Settings
    , Environment
    , Errors
    , Initialize
    , Internal.Database.Bolt.Environment
    , Internal.Data.CollectionJSON
    , Internal.Data.SirenJSON
    , Internal.Data.Time.Clock.Environment
    , Internal.Network.HTTP.Media
    , Internal.Network.HTTP.Types
    , Internal.Network.URI
    , Internal.Servant.API.ContentTypes.CollectionJSON
    , Internal.Servant.API.ContentTypes.SirenJSON
    , Settings

  build-depends:
      aeson                == 1.0.*
    , base                 == 4.9.*
    , bytestring           == 0.10.*
    , containers           == 0.5.*
    , data-default         == 0.7.*
    , either               == 4.4.*
    , envy                 == 1.3.*
    , exceptions           == 0.8.*
    , hasbolt              == 0.1.*
    , http-api-data        == 0.3.*
    , http-media           == 0.6.*
    , http-types           == 0.9.*
    , MissingH             == 1.4.*
    , mtl                  == 2.2.*
    , network-uri          == 2.6.*
    , resource-pool        == 0.2.*
    , retry                == 0.7.*
    , servant              == 0.9.*
    , servant-server       == 0.9.*
    , text                 == 1.2.*
    , time                 == 1.6.*
    , unordered-containers == 0.2.*
    , uuid                 == 1.3.*
    , wai-logger           == 2.3.*
    , warp                 == 3.2.*

  other-extensions:
      DataKinds
    , FlexibleInstances
    , MultiParamTypeClasses
    , OverloadedStrings
    , RecordWildCards
    , TypeOperators

test-suite collection-json-Properties
  default-language: Haskell2010
  hs-source-dirs:   src test/collection-json

  type:             exitcode-stdio-1.0
  main-is:          Test.hs

  ghc-options: -Wall -fwarn-tabs -fwarn-monomorphism-restriction
               -fwarn-unused-do-bind

  other-modules:
      Internal.Data.CollectionJSON
    , Internal.Data.CollectionJSON.Tests
    
    , Internal.Network.URI
    , Internal.Network.URI.Tests

  build-depends:
      aeson                == 1.0.*
    , base                 == 4.9.*
    , http-api-data        == 0.3.*
    , MissingH             == 1.4.*
    , network-uri          == 2.6.*
    , QuickCheck           == 2.9.*
    , quickcheck-instances == 0.3.*
    , test-invariant       == 0.4.*
    , text                 == 1.2.*

  other-extensions:
      OverloadedStrings
    , RecordWildCards
    , TemplateHaskell

test-suite siren-Properties
  default-language: Haskell2010
  hs-source-dirs:   src test/siren

  type:             exitcode-stdio-1.0
  main-is:          Test.hs

  ghc-options: -Wall -fwarn-tabs -fwarn-monomorphism-restriction
               -fwarn-unused-do-bind

  other-modules:
      Internal.Data.SirenJSON
    , Internal.Data.SirenJSON.Tests

    , Internal.Network.HTTP.Media
    , Internal.Network.HTTP.Types
    , Internal.Network.URI
    , Internal.Network.URI.Tests

  build-depends:
      aeson                == 1.0.*
    , base                 == 4.9.*
    , bytestring           == 0.10.*
    , containers           == 0.5.*
    , http-api-data        == 0.3.*
    , http-media           == 0.6.*
    , http-types           == 0.9.*
    , MissingH             == 1.4.*
    , network-uri          == 2.6.*
    , QuickCheck           == 2.9.*
    , quickcheck-instances == 0.3.*
    , test-invariant       == 0.4.*
    , text                 == 1.2.*
    , unordered-containers == 0.2.*

  other-extensions:
      OverloadedStrings
    , RecordWildCards
    , TemplateHaskell
