name:                dungeon-studio
version:             0.1.0.0
synopsis:            Game Master's Companion

description:
  A set of APIs that assist a game master during a table top game session.  The
  APIs allow a game master or players to manipulate characters, equipment, and
  other normal game elements.

homepage:            https://github.com/alunduil/dungeon.studio
bug-reports:         https://github.com/alunduil/dungeon.studio/issues
license:             MIT
license-file:        LICENSE
author:              Alex Brandt
maintainer:          alunduil@alunduil.com
copyright:           (c) 2017 Alex Brandt
category:            Game
build-type:          Simple
cabal-version:       >= 1.10
tested-with:         GHC == 8.0.*

extra-source-files:
    ChangeLog.md
  , COPYRIGHT
  , LICENSE
  , README.md
  , Setup.hs
  
source-repository head
  type:     git
  location: https://github.com/alunduil/dungeon-studio.git

executable collection-server
  default-language:    Haskell2010
  hs-source-dirs:      src/collection-server

  main-is:             Main.hs

  ghc-options:         -Wall -fwarn-tabs -fwarn-monomorphism-restriction
                       -fwarn-unused-do-bind

  other-modules:
      API
    , Environment
    , Errors
    , Internal.Network.URI
    , Internal.Servant.API.ContentTypes.CollectionJSON
    , Types

  build-depends:
      aeson           == 1.1.*
    , base            == 4.9.*
    , collection-json == 1.0.*
    , directory       == 1.3.*
    , envy            == 1.3.*
    , extra           == 1.5.*
    , filepath        == 1.4.*
    , http-api-data   == 0.3.*
    , http-media      == 0.6.*
    , http-types      == 0.9.*
    , MissingH        == 1.4.*
    , network-uri     == 2.6.*
    , servant         == 0.11.*
    , servant-server  == 0.11.*
    , text            == 1.2.*
    , wai-logger      == 2.3.*
    , warp            == 3.2.*
    , yaml            == 0.8.*

  other-extensions:
      DataKinds
    , DeriveGeneric
    , FlexibleInstances
    , MultiParamTypeClasses
    , OverloadedStrings
    , RecordWildCards
    , TypeOperators

executable dungeon-studio
  default-language:    Haskell2010
  hs-source-dirs:      src/dungeon-studio

  main-is:             Main.hs

  ghc-options:         -Wall -fwarn-tabs -fwarn-monomorphism-restriction
                       -fwarn-unused-do-bind

  other-modules:
      API
    , Earthdawn.API
    , Earthdawn.FourthEdition.API
    , Earthdawn.FourthEdition.Characters.API
    , Earthdawn.FourthEdition.Characters.Queries
    , Earthdawn.FourthEdition.Characters.Types
    , Earthdawn.Settings
    , Environment
    , Initialize
    , Internal.Database.Bolt.Environment
    , Internal.Data.SirenJSON
    , Internal.Data.Time.Clock.Environment
    , Internal.Network.HTTP.Media
    , Internal.Network.HTTP.Types
    , Internal.Network.URI
    , Internal.Servant.API.ContentTypes.SirenJSON
    , Settings

  build-depends:
      aeson                == 1.1.*
    , base                 == 4.9.*
    , bytestring           == 0.10.*
    , containers           == 0.5.*
    , data-default         == 0.7.*
    , envy                 == 1.3.*
    , exceptions           == 0.8.*
    , hasbolt              == 0.1.*
    , http-api-data        == 0.3.*
    , http-media           == 0.6.*
    , http-types           == 0.9.*
    , MissingH             == 1.4.*
    , mtl                  == 2.2.*
    , network-uri          == 2.6.*
    , resource-pool        == 0.2.*
    , retry                == 0.7.*
    , servant              == 0.11.*
    , servant-server       == 0.11.*
    , text                 == 1.2.*
    , time                 == 1.6.*
    , unordered-containers == 0.2.*
    , uuid                 == 1.3.*
    , wai-logger           == 2.3.*
    , warp                 == 3.2.*

  other-extensions:
      DataKinds
    , FlexibleInstances
    , MultiParamTypeClasses
    , OverloadedStrings
    , RecordWildCards
    , TypeOperators
